--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -22,3 +22,9 @@
   padding: 20px 0;
   max-width: var(--max-content-width);
 }
+
+.factor {
+  margin-left: 10px;
+  position: relative;
+  top: -6px;
+}
