--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -23,6 +23,10 @@
   max-width: var(--max-content-width);
 }
 
+.banner {
+  text-align: center;
+}
+
 .factor {
   margin-left: 10px;
   position: relative;
